[gd_scene load_steps=14 format=2]

[ext_resource path="res://examples/the_question/resources/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://examples/the_question/ui/Dialog.gd" type="Script" id=2]
[ext_resource path="res://examples/the_question/resources/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://examples/the_question/resources/fonts/Comfortaa-Light.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 1 )

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_right = 1024.0
margin_bottom = 425.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="SpeechRect" type="ColorRect" parent="VBox"]
margin_top = 429.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
color = Color( 0.14902, 0.14902, 0.14902, 0.592157 )

[node name="HBox" type="HBoxContainer" parent="VBox/SpeechRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="VBox/SpeechRect/HBox"]
margin_right = 84.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_styles/separator = SubResource( 2 )

[node name="VBox" type="VBoxContainer" parent="VBox/SpeechRect/HBox"]
margin_left = 88.0
margin_right = 935.0
margin_bottom = 171.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBox/SpeechRect/HBox/VBox"]
margin_right = 847.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/separator = SubResource( 3 )

[node name="NameLabel" type="RichTextLabel" parent="VBox/SpeechRect/HBox/VBox"]
margin_top = 20.0
margin_right = 847.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Character Name"
text = "Character Name"

[node name="SpeechLabel" type="RichTextLabel" parent="VBox/SpeechRect/HBox/VBox"]
margin_top = 57.0
margin_right = 847.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = SubResource( 8 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Character Speech here"
visible_characters = 0
text = "Character Speech here"

[node name="VSeparator2" type="VSeparator" parent="VBox/SpeechRect/HBox"]
margin_left = 939.0
margin_right = 1024.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_styles/separator = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.749176
margin_bottom = -0.749146
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
